fix alignment bug

--- a/nut/static/css/web/site.less
+++ b/nut/static/css/web/site.less
@@ -111,6 +111,10 @@
     //width:7400px;
     //overflow:hidden;
     //overflow-x: scroll;
+    //fix alignment bug
+    margin-left:-12px;
+    margin-right:-12px;
+
     li.category-item{
       overflow: hidden;
       float:left;
